--- a/assign4-remake/index.html
+++ b/assign4-remake/index.html
@@ -21,9 +21,9 @@
 	</ul>
 
 	<ul class="tabs_right">
-	  <li><a href="#home"><i aria-label="Email" class="fa fa-envelope-square"></i></a></li>
-	  <li><a href="#home"><i aria-label="Instagram" class="fa fa-instagram"></i></a></li>
-	  <li><a href="#home"><i aria-label="Twitter" class="fa fa-twitter"></i></a></li>
+	  <li><a href="#home"><i aria-label="Email" class="fa fa-envelope-square"></i><span>Email</span></a></li>
+	  <li><a href="#home"><i aria-label="Instagram" class="fa fa-instagram"></i><span>Instagram</span></a></li>
+	  <li><a href="#home"><i aria-label="Twitter" class="fa fa-twitter"></i><span>Twitter</span></a></li>
 	  <li><a href="#home"><i aria-label="Facebook" class="fa fa-facebook"></i><span>Facebook</span></a></li>
 	</ul>
 </div>		
