--- a/assign4-remake/index.html
+++ b/assign4-remake/index.html
@@ -186,8 +186,8 @@
 	  <!-- Modal content -->
 	  <div class="modal-content">
 	    <div style="margin-bottom: 8px;"><span class="close" id="_close">&times;</span></div>
-	    <div style="margin-bottom: 8px;font-size: 64px;"><h3>Sent<span style="margin-left: 20px;"><i class="fa fa-check-circle" ></i></span></h3></div>
-	    <div style="margin-bottom: 8px;font-size: 18px;"><p>Thank you for reading my blog!<span style="margin-left: 10px;"><i class="fa fa-smile-o"></i></span></p></div>
+	    <div style="margin-bottom: 8px;font-size: 64px;"><h3 id="status">Sent</h3></div>
+	    <div style="margin-bottom: 8px;font-size: 18px;"><p id="message">Thank you for reading my blog!</p></div>
 	  </div>
 	</div>		
 		
